# ticket_manager

./: .env_dist  Dockerfile  bot.py  config.py  docker-compose.yml  pyproject.toml
backend/database/: setup.py
backend/database/models/: __init__.py  base.py  users.py
backend/database/repo/: requests.py
bot/services/: broadcaster.py
migrations/: env.py
migrations/versions/: 001_init_migration.py
scripts/alembic/: create_migrations.sh  run_migrations.sh
